--- a/plugin.xml
+++ b/plugin.xml
@@ -15,16 +15,17 @@
 	    <js-module src="www/android/nonin.js" name="Nonin">
 			<clobbers target="nonin" />
 		</js-module>
-	
+
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Nonin">
                 <param name="android-package" value="org.apache.cordova.nonin.NoninPlugin"/>
             </feature>
         </config-file>
-		
+
         <config-file target="AndroidManifest.xml" parent="/*">
           <uses-permission android:name="android.permission.BLUETOOTH" />
           <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+          <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
         </config-file>
 
         <source-file src="src/android/NoninPlugin.java" target-dir="src/org/apache/cordova/nonin" />
@@ -33,12 +34,12 @@
         <source-file src="src/android/NoninPacket.java" target-dir="src/org/apache/cordova/nonin" />
 
     </platform>
-	
+
 	<platform name="browser">
-	
+
 		<js-module src="www/browser/nonin.js" name="Nonin">
 			<clobbers target="nonin" />
 		</js-module>
-		
+
     </platform>
 </plugin>
